openshift/app/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-web
  labels:
    app: finance-web
    app.kubernetes.io/part-of: finance
    app.openshift.io/runtime: ruby
    app.openshift.io/runtime-version: '3.4'
    app.kubernetes.io/name: 'finance-web'
  annotations:
    app.openshift.io/connects-to: '[{"apiVersion":"apps/v1","kind":"Deployment","name":"db"}]'
    app.openshift.io/vcs-uri: 'https://github.com/jkeam/finance-web.git'
    app.openshift.io/vcs-ref: 'main'
spec:
  selector:
    matchLabels:
      app: finance-web
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: finance-web
    spec:
      containers:
      - name: finance-web
        image: quay.io/jkeam/finance-web
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: theport
        command: ["./bin/thrust"]
        args: ["./bin/rails", "server", "-b", "0.0.0.0"]
        startupProbe:
          httpGet:
            path: /up
            port: 8080
            httpHeaders:
            - name: Accept
              value: "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8"
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 10
        livenessProbe:
          httpGet:
            path: /up
            port: 8080
            httpHeaders:
            - name: Accept
              value: "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8"
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 20
        readinessProbe:
          httpGet:
            path: /up
            port: 8080
            httpHeaders:
            - name: Accept
              value: "text/html,application/xhtml+xml,application/xml;q=0.9,*/*;q=0.8"
          initialDelaySeconds: 3
          periodSeconds: 3
          failureThreshold: 10
      restartPolicy: Always
