openshift/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: finance-web
  labels:
    app: finance-web
spec:
  ports:
    - name: port8080
      port: 8080
      targetPort: 3000
  selector:
    app: finance-web
  type: ClusterIP
