openshift/app/app-tls-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: finance-tls
  labels:
    app: finance-web
spec:
  host: finance.keam.org
  to:
    kind: Service
    name: finance-web
    weight: 100
  port:
    targetPort: port8080
  tls:
    termination: edge
    externalCertificate:
      name: app-tls-cert-secret
